[package]
name = "calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = 0

[profile.dev]
debug = 1
