[package]
name = "gameutil-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-dll = "0.3.0"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
sysinfo = "0.22.4"
nwg = {version = "^1.0.12", package = "native-windows-gui"}

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "^0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = 0